--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.1.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
     "@types/passport-facebook": "^2.1.11",
+    "@types/passport-instagram": "^1.0.2",
     "axios": "^0.25.0",
     "cassandra-driver": "^4.6.3",
     "connect-flash": "^0.1.1",
@@ -39,10 +42,15 @@
     "mongodb": "^3.7.3",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
+    "passport-instagram": "^1.0.0",
+    "passport-instagram-strategy": "^0.0.14",
     "passport-jwt": "^4.0.0",
+    "passport-twitter": "^1.0.4",
+    "passport-twitter-oauth2": "^2.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.2.41"
   },
   "devDependencies": {
