feat: dockerized the entire app

--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,8 @@ TWITTER_KEY=
 TWITTER_SECRET=
 NEST_APP_KEY_PATH=./secrets/localhost.key
 NEST_APP_CERT_PATH=./secrets/localhost.crt
+CASSANDRA_CONTACT_POINTS=cassandra
+CASSANDRA_KEYSPACE=earthpoints
+CASSANDRA_LOCAL_DATA_CENTER=datacenter1
+CASSANDRA_USERNAME=cassandra
+CASSANDRA_PASSWORD=cassandra
