--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,41 @@ services:
       - ~/apps/cassandra:/var/lib/cassandra
     environment:
       - CASSANDRA_CLUSTER_NAME=earthpoints
+  dev:
+      container_name: nestjs_api_dev
+      image: nestjs-api-dev:1.0.0
+      build:
+          context: .
+          target: development
+          dockerfile: ./Dockerfile
+      command: npm run start:dev
+      ports:
+          - 3000:3000
+          - 9229:9229
+      volumes:
+          - .:/usr/src/app
+          - /usr/src/app/node_modules
+      restart: unless-stopped
+      env_file:
+        - .env      
+      depends_on:
+        - cassandra
+  prod:
+      container_name: nestjs_api_prod
+      image: nestjs-api-prod:1.0.0
+      build:
+          context: .
+          target: production
+          dockerfile: ./Dockerfile
+      command: npm run start:prod
+      ports:
+          - 3000:3000
+          - 9229:9229
+      volumes:
+          - .:/usr/src/app
+          - /usr/src/app/node_modules
+      restart: unless-stopped
+      env_file:
+        - .env      
+      depends_on:
+        - cassandra
