--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
       volumes:
           - .:/usr/src/app
           - /usr/src/app/node_modules
+          - /usr/src/app/dist
       restart: unless-stopped
       env_file:
         - .env      
