feat: web app expose port can be configured though environment variables.

--- a/.env.template
+++ b/.env.template
@@ -11,3 +11,4 @@ CASSANDRA_KEYSPACE=earthpoints
 CASSANDRA_LOCAL_DATA_CENTER=datacenter1
 CASSANDRA_USERNAME=cassandra
 CASSANDRA_PASSWORD=cassandra
+WEB_APP_PORT=3001
