--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
           dockerfile: ./Dockerfile
       command: npm run start:dev
       ports:
-          - 3000:3000
+          - ${WEB_APP_PORT}:3000
           - 9229:9229
       volumes:
           - .:/usr/src/app
@@ -37,7 +37,7 @@ services:
           dockerfile: ./Dockerfile
       command: npm run start:prod
       ports:
-          - 3000:3000
+          - ${WEB_APP_PORT}:3000
           - 9229:9229
       volumes:
           - .:/usr/src/app
