--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/passport-facebook": "^2.1.11",
     "@types/passport-instagram": "^1.0.2",
     "axios": "^0.25.0",
+    "bcrypt": "^5.0.1",
     "cassandra-driver": "^4.6.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
@@ -57,6 +58,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/connect-flash": "^0.0.37",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
