--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,12 @@
 FACEBOOK_APP_ID=
 FACEBOOK_APP_SECRET=
+FACEBOOK_CALLBACK_URL=https://localhost:3000/facebook/redirect
 INSTAGRAM_APP_ID=
 INSTAGRAM_APP_SECRET=
+INSTAGRAM_CALLBACK_URL=https://localhost:3000/instagram/redirect
 TWITTER_KEY=
 TWITTER_SECRET=
+TWITTER_CALLBACK_URL=https://localhost:3000/twitter/redirect
 NEST_APP_KEY_PATH=./secrets/localhost.key
 NEST_APP_CERT_PATH=./secrets/localhost.crt
 CASSANDRA_CONTACT_POINTS=cassandra
@@ -11,4 +14,4 @@ CASSANDRA_KEYSPACE=earthpoints
 CASSANDRA_LOCAL_DATA_CENTER=datacenter1
 CASSANDRA_USERNAME=cassandra
 CASSANDRA_PASSWORD=cassandra
-WEB_APP_PORT=3001
+WEB_APP_PORT=3000
