fix: adding missing environment variables to the template

--- a/.env.template
+++ b/.env.template
@@ -15,3 +15,6 @@ CASSANDRA_LOCAL_DATA_CENTER=datacenter1
 CASSANDRA_USERNAME=cassandra
 CASSANDRA_PASSWORD=cassandra
 WEB_APP_PORT=3000
+REWARD_HASHTAG=SaveSoil
+REWARD_POINTS=3
+REWARD_MESSAGE=You posted about soil! Well done!
