--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@types/passport-facebook": "^2.1.11",
     "@types/passport-instagram": "^1.0.2",
     "axios": "^0.25.0",
-    "bcrypt": "^5.0.1",
     "cassandra-driver": "^4.6.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
@@ -53,13 +52,13 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.3.0",
+    "twitter-api-v2": "^1.10.3",
     "typeorm": "^0.2.41"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
-    "@types/bcrypt": "^5.0.0",
     "@types/connect-flash": "^0.0.37",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
