chore: env template fix

--- a/.env.template
+++ b/.env.template
@@ -6,6 +6,7 @@ INSTAGRAM_APP_SECRET=
 INSTAGRAM_CALLBACK_URL=https://localhost:3000/instagram/redirect
 TWITTER_KEY=
 TWITTER_SECRET=
+TWITTER_BEARER=
 TWITTER_CALLBACK_URL=https://localhost:3000/twitter/redirect
 NEST_APP_KEY_PATH=./secrets/localhost.key
 NEST_APP_CERT_PATH=./secrets/localhost.crt
