Update env template

--- a/.env.template
+++ b/.env.template
@@ -17,5 +17,7 @@ CASSANDRA_USERNAME=cassandra
 CASSANDRA_PASSWORD=cassandra
 WEB_APP_PORT=3000
 REWARD_HASHTAG=SaveSoil
-REWARD_POINTS=3
+REWARD_POINTS=5
 REWARD_MESSAGE=You posted about soil! Well done!
+SHARE_POINTS=3
+SHARE_MESSAGE=Thanks for sharing!
