--- a/.env.template
+++ b/.env.template
@@ -19,3 +19,5 @@ WEB_APP_PORT=3000
 REWARD_HASHTAG=SaveSoil
 REWARD_POINTS=3
 REWARD_MESSAGE=You posted about soil! Well done!
+SHARE_POINTS=3
+SHARE_MESSAGE=Thanks for sharing!
