New param: BASE_URL to .env.template

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
+BASE_URL=https://localhost:3000
 FACEBOOK_APP_ID=
 FACEBOOK_APP_SECRET=
 FACEBOOK_CALLBACK_URL=https://localhost:3000/facebook/redirect
