--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
     "passport-instagram": "^1.0.0",
-    "passport-instagram-strategy": "^0.0.14",
+    "passport-instagram-strategy": "github:EeroHeikkinen/passport-instagram-strategy",
     "passport-jwt": "^4.0.0",
     "passport-twitter": "^1.0.4",
     "passport-twitter-oauth2": "^2.1.1",
