--- a/.env.template
+++ b/.env.template
@@ -19,3 +19,4 @@ REWARD_POINTS=5
 REWARD_MESSAGE=You posted about soil! Well done!
 SHARE_POINTS=3
 SHARE_MESSAGE=Thanks for sharing!
+CONNECT_PLATFORM_POINTS=10
