--- a/kuber.yml
+++ b/kuber.yml
@@ -1,3 +1,17 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  creationTimestamp: null
+  labels:
+    io.kompose.service: cassandra-claim0
+  name: cassandra-claim0
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -20,10 +34,22 @@ spec:
         app: earthpoints-poc
     spec:
       containers:
+        - name: cassandra
+          image: cassandra:4.0
+          env:
+            - name: CASSANDRA_CLUSTER_NAME
+              value: earthpoints          
+          ports:
+            - containerPort: 9042
+              protocol: TCP
+          volumeMounts:
+            - mountPath: /var/lib/cassandra
+              name: cassandra-volume
         - name: earthpoints-poc
           image: <IMAGE>
           ports:
             - containerPort: 3000
+              protocol: TCP
           resources:
             requests:
               cpu: 100m
@@ -32,18 +58,31 @@ spec:
           envFrom:
           - secretRef:
               name: earthpoints-poc-secret
+      volumes:
+        - name: cassandra-volume
+          persistentVolumeClaim:
+            claimName: cassandra-claim0
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: earthpoints-poc-service
+  annotations:
+    service.beta.kubernetes.io/do-loadbalancer-name: "earthpoints-poc-service"
+    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
+    service.beta.kubernetes.io/do-loadbalancer-tls-ports: "443"
+    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "20f424dd-149c-494a-92f6-f71683af0b47"
+    service.beta.kubernetes.io/do-loadbalancer-disable-lets-encrypt-dns-records: "false"
+    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
 spec:
   type: LoadBalancer
   ports:
     - name: http
+      protocol: TCP
       port: 80
       targetPort: 3000
     - name: https
+      protocol: TCP
       port: 443
       targetPort: 3000
   selector:
