--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.1.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^1.0.2",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
@@ -61,6 +62,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/connect-flash": "^0.0.37",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/express-handlebars": "^6.0.0",
     "@types/express-session": "^1.17.4",
