WIP: Add emailing support with config in .env Read user emails from Facebook and Twitter login data Timezone support from user ip Add date range support to platform extractors and persist that in database Refactor SocialCrendential to PlatformConnection

--- a/.env.template
+++ b/.env.template
@@ -20,3 +20,10 @@ REWARD_MESSAGE=You posted about soil! Well done!
 SHARE_POINTS=3
 SHARE_MESSAGE=Thanks for sharing!
 CONNECT_PLATFORM_POINTS=10
+OLDEST_TO_RETRIEVE=2021-09-01T00:00:00
+EMAIL_HOST=smtp.ethereal.email
+EMAIL_PORT=587
+EMAIL_ID=jed.haag61@ethereal.email
+EMAIL_PASS=51Akp9htY4J1rQ1pyH
+HOURS_UNTIL_FIRST_DAILY_EMAIL=12
+#TEST_IP=85.76.111.187
