--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.6.1",
     "@nestjs/axios": "^0.0.5",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
@@ -41,7 +42,10 @@
     "dotenv": "^15.0.0",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
+    "handlebars": "^4.7.7",
+    "moment": "^2.29.1",
     "mongodb": "^3.7.3",
+    "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
     "passport-instagram": "^1.0.0",
@@ -52,6 +56,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "satelize": "^0.2.0",
     "swagger-ui-express": "^4.3.0",
     "twitter-api-v2": "^1.10.3",
     "typeorm": "^0.2.41"
@@ -68,6 +73,7 @@
     "@types/express-session": "^1.17.4",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
