--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
 
       # Build a Docker image of your application in your registry and tag the image with the $GITHUB_SHA.
       - name: Build container image
-        run: docker build -t registry.digitalocean.com/earthpoints/earthpoints-poc:$(echo $GITHUB_SHA | head -c7) -t registry.digitalocean.com/earthpoints/earthpoints-poc:latest .
+        run: docker build --no-cache -t registry.digitalocean.com/earthpoints/earthpoints-poc:$(echo $GITHUB_SHA | head -c7) -t registry.digitalocean.com/earthpoints/earthpoints-poc:latest .
 
       - name: Log in to DigitalOcean Container Registry with short-lived credentials
         run: doctl registry login --expiry-seconds 1200
