--- a/kuber.yml
+++ b/kuber.yml
@@ -85,7 +85,7 @@ spec:
       labels:
         app: earthpoints-poc
     spec:
-      terminationGracePeriodSeconds: 1800
+      terminationGracePeriodSeconds: 120
       containers:
         - name: earthpoints-poc
           image: registry.digitalocean.com/earthpoints/earthpoints-poc:latest
@@ -98,6 +98,9 @@ spec:
               cpu: 100m
             limits:
               cpu: 100m
+          env:
+          - name: KUBE_CONFIG_APPLY_DATE
+            value: '<DATE>'              
           envFrom:
           - secretRef:
               name: earthpoints-poc-secret
