feat: completed queue mechanisim for development environment

--- a/.env.template
+++ b/.env.template
@@ -20,3 +20,5 @@ REWARD_MESSAGE=You posted about soil! Well done!
 SHARE_POINTS=3
 SHARE_MESSAGE=Thanks for sharing!
 CONNECT_PLATFORM_POINTS=10
+REDIS_HOST=redis
+REDIS_PORT=6379
