--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/axios": "^0.0.5",
+    "@nestjs/bull": "^0.5.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
@@ -34,6 +35,7 @@
     "@types/passport-facebook": "^2.1.11",
     "@types/passport-instagram": "^1.0.2",
     "axios": "^0.25.0",
+    "bull": "^4.6.1",
     "cassandra-driver": "^4.6.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
@@ -59,6 +61,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bull": "^3.15.8",
     "@types/connect-flash": "^0.0.37",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
