--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "mongodb": "^3.7.3",
     "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
@@ -110,6 +111,9 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
-    "moduleDirectories": ["node_modules","<rootDir>"]
+    "moduleDirectories": [
+      "node_modules",
+      "<rootDir>"
+    ]
   }
 }
