Make JWT secret an env variable

--- a/.env.template
+++ b/.env.template
@@ -30,3 +30,4 @@ EMAIL_PASS=51Akp9htY4J1rQ1pyH
 EMAIl_FROM=jed.haag61@ethereal.email
 HOURS_UNTIL_FIRST_DAILY_EMAIL=12
 #TEST_IP=85.76.111.187
+JWT_SECRET=mysecret
