--- a/.env.template
+++ b/.env.template
@@ -31,3 +31,4 @@ EMAIl_FROM=jed.haag61@ethereal.email
 HOURS_UNTIL_FIRST_DAILY_EMAIL=12
 #TEST_IP=85.76.111.187
 JWT_SECRET=mysecret
+CRON=* * * * *
