--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^15.0.0",
+    "express-basic-auth": "^1.2.1",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
