--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "bull": "^4.6.1",
     "canvas": "^2.9.0",
     "cassandra-driver": "^4.6.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^15.0.0",
