--- a/kuber.yml
+++ b/kuber.yml
@@ -46,13 +46,15 @@ spec:
       labels:
         app: cassandra
     spec:
-      terminationGracePeriodSeconds: 1800
+      terminationGracePeriodSeconds: 120
       containers:
         - name: cassandra
           image: cassandra:4.0
           env:
             - name: CASSANDRA_CLUSTER_NAME
-              value: earthpoints          
+              value: earthpoints    
+            - name: KUBE_CONFIG_APPLY_DATE
+              value: '202203110230'
           ports:
             - containerPort: 9042
               protocol: TCP
@@ -113,7 +115,7 @@ metadata:
   labels:
     app: earthpoints-poc
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: earthpoints-poc
@@ -146,28 +148,3 @@ spec:
           envFrom:
           - secretRef:
               name: earthpoints-poc-secret
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: earthpoints-poc-service
-  annotations:
-    service.beta.kubernetes.io/do-loadbalancer-name: "earthpoints-poc-service"
-    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
-    service.beta.kubernetes.io/do-loadbalancer-tls-ports: "443"
-    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "20f424dd-149c-494a-92f6-f71683af0b47"
-    service.beta.kubernetes.io/do-loadbalancer-disable-lets-encrypt-dns-records: "false"
-    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
-spec:
-  type: LoadBalancer
-  ports:
-    - name: http
-      protocol: TCP
-      port: 80
-      targetPort: 3000
-    - name: https
-      protocol: TCP
-      port: 443
-      targetPort: 3000
-  selector:
-    app: earthpoints-poc
