--- a/kuber.yml
+++ b/kuber.yml
@@ -148,3 +148,8 @@ spec:
           envFrom:
           - secretRef:
               name: earthpoints-poc-secret
+          startupProbe:
+            tcpSocket:
+              port: 3000
+            failureThreshold: 30
+            periodSeconds: 10
