--- a/kuber.yml
+++ b/kuber.yml
@@ -46,6 +46,15 @@ spec:
       labels:
         app: cassandra
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: doks.digitalocean.com/node-pool
+                operator: In
+                values:
+                - earthpoints-db
       terminationGracePeriodSeconds: 120
       containers:
         - name: cassandra
@@ -54,7 +63,7 @@ spec:
             - name: CASSANDRA_CLUSTER_NAME
               value: earthpoints    
             - name: KUBE_CONFIG_APPLY_DATE
-              value: '202203110230'
+              value: '202203110428'
           ports:
             - containerPort: 9042
               protocol: TCP
@@ -100,6 +109,15 @@ spec:
       labels:
         app: redis
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: doks.digitalocean.com/node-pool
+                operator: In
+                values:
+                - earthpoints-poc
       terminationGracePeriodSeconds: 120
       containers:
         - name: redis
@@ -129,6 +147,15 @@ spec:
       labels:
         app: earthpoints-poc
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: doks.digitalocean.com/node-pool
+                operator: In
+                values:
+                - earthpoints-poc
       terminationGracePeriodSeconds: 120
       containers:
         - name: earthpoints-poc
