--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,17 +50,17 @@ jobs:
         run: docker push registry.digitalocean.com/earthpoints/earthpoints-poc:latest
 
       # Deploy to DigitalOCcean Kubernetes.
-      # - name: Update deployment file
-      #  run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|registry.digitalocean.com/earthpoints/earthpoints-poc:'${TAG}'|' $GITHUB_WORKSPACE/kuber.yml
+      - name: Update deployment file
+        run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|:latest|:'${TAG}'|' $GITHUB_WORKSPACE/kuber-app-${{ github.event.inputs.environment }}.yml
 
       - name: Update deployment file
-        run: sed -ie "s/<DATE>/$(date)/g" $GITHUB_WORKSPACE/kuber.yml
+        run: sed -ie "s/<DATE>/$(date)/g" $GITHUB_WORKSPACE/kuber-app-${{ github.event.inputs.environment }}.yml
 
       - name: Save DigitalOcean kubeconfig with short-lived credentials
         run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 ffb1a5d5-e0c7-4553-87d2-db6633465a6d
 
       - name: Deploy to DigitalOcean Kubernetes
-        run: kubectl apply -n=${{ github.event.inputs.environment }} -f $GITHUB_WORKSPACE/kuber.yml
+        run: kubectl apply -n=${{ github.event.inputs.environment }} -f $GITHUB_WORKSPACE/kuber-app-${{ github.event.inputs.environment }}.yml
 
       - name: Verify deployment
         run: kubectl rollout status -n=${{ github.event.inputs.environment }} deployment/earthpoints-poc
