feat: adding environment variable for disabling e-mail sent.

--- a/.env.template
+++ b/.env.template
@@ -32,6 +32,7 @@ EMAIL_PORT=587
 EMAIL_ID=jed.haag61@ethereal.email
 EMAIL_PASS=51Akp9htY4J1rQ1pyH
 EMAIL_FROM=jed.haag61@ethereal.email
+EMAIL_ENABLED=1
 HOURS_UNTIL_FIRST_DAILY_EMAIL=12
 #TEST_IP=85.76.111.187
 JWT_SECRET=mysecret
