chore: changed the node pool for kafka

--- a/kuber.yml
+++ b/kuber.yml
@@ -131,7 +131,7 @@ spec:
               - key: doks.digitalocean.com/node-pool
                 operator: In
                 values:
-                - earthpoints-db
+                - kafka
       terminationGracePeriodSeconds: 120
       initContainers:
       - name: kafka-data-permission-fix
