--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,17 +50,26 @@ jobs:
         run: docker push registry.digitalocean.com/earthpoints/earthpoints-poc:latest-${{ github.event.inputs.environment }}
 
       # Deploy to DigitalOCcean Kubernetes.
-      - name: Update deployment file
+      - name: Update image name in deployment
         run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|:latest-${{ github.event.inputs.environment }}|:'${TAG}'|' $GITHUB_WORKSPACE/kuber-app-${{ github.event.inputs.environment }}.yml
 
-      - name: Update deployment file
+      - name: Update image name in statefulset
+        run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|:latest-${{ github.event.inputs.environment }}|:'${TAG}'|' $GITHUB_WORKSPACE/kuber-que-${{ github.event.inputs.environment }}.yml
+
+      - name: Update date in deployment
         run: sed -ie "s/<DATE>/$(date)/g" $GITHUB_WORKSPACE/kuber-app-${{ github.event.inputs.environment }}.yml
+
+      - name: Update date in statefulset
+        run: sed -ie "s/<DATE>/$(date)/g" $GITHUB_WORKSPACE/kuber-que-${{ github.event.inputs.environment }}.yml
 
       - name: Save DigitalOcean kubeconfig with short-lived credentials
         run: doctl kubernetes cluster kubeconfig save --expiry-seconds 600 ffb1a5d5-e0c7-4553-87d2-db6633465a6d
 
-      - name: Deploy to DigitalOcean Kubernetes
+      - name: Apply Deployment to Cluster
         run: kubectl apply -n=${{ github.event.inputs.environment }} -f $GITHUB_WORKSPACE/kuber-app-${{ github.event.inputs.environment }}.yml
+
+      - name: Apply Statefulset to Cluster
+        run: kubectl apply -n=${{ github.event.inputs.environment }} -f $GITHUB_WORKSPACE/kuber-que-${{ github.event.inputs.environment }}.yml
 
       - name: Verify deployment
         run: kubectl rollout status -n=${{ github.event.inputs.environment }} deployment/earthpoints-poc
