--- a/kuber-que-default.yml
+++ b/kuber-que-default.yml
@@ -1,24 +1,22 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  name: earthpoints-poc
+  name: earthpoints-que
   namespace: default
   labels:
-    app: earthpoints-poc
+    app: earthpoints-que
 spec:
-  replicas: 5
+  serviceName: earthpoints-que
+  replicas: 1
   selector:
     matchLabels:
-      app: earthpoints-poc
+      app: earthpoints-que
   strategy:
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 1
   minReadySeconds: 5
   template:
     metadata:
       labels:
-        app: earthpoints-poc
+        app: earthpoints-que
     spec:
       affinity:
         nodeAffinity:
@@ -31,7 +29,7 @@ spec:
                 - earthpoints-poc
       terminationGracePeriodSeconds: 120
       containers:
-        - name: earthpoints-poc
+        - name: earthpoints-que
           image: registry.digitalocean.com/earthpoints/earthpoints-poc:latest-default
           imagePullPolicy: "Always"
           ports:
@@ -44,7 +42,11 @@ spec:
               cpu: 100m
           env:
           - name: KUBE_CONFIG_APPLY_DATE
-            value: '<DATE>'              
+            value: '<DATE>'      
+          - name: POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name                    
           envFrom:
           - secretRef:
               name: earthpoints-poc-secret
