--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^15.0.0",
     "express-basic-auth": "^1.2.1",
@@ -60,6 +61,7 @@
     "passport-jwt": "^4.0.0",
     "passport-twitter": "^1.0.4",
     "passport-twitter-oauth2": "^2.1.1",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -74,6 +76,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/bull": "^3.15.8",
     "@types/connect-flash": "^0.0.37",
+    "@types/connect-redis": "^0.0.18",
     "@types/cookie-parser": "^1.4.2",
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
@@ -83,6 +86,7 @@
     "@types/node": "^16.0.0",
     "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.6",
+    "@types/redis": "^4.0.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
