--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "express-basic-auth": "^1.2.1",
     "express-handlebars": "^6.0.2",
     "handlebars": "^4.7.7",
+    "handlebars-helpers": "^0.10.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "mongodb": "^3.7.3",
