--- a/.github/workflows/Backup.yml
+++ b/.github/workflows/Backup.yml
@@ -13,7 +13,7 @@ on:
         description: 'Environment to Backup'
         type: environment
         required: true
-        default: ${{DEFAULT_ENVIRONMENT}}
+        default: ${DEFAULT_ENVIRONMENT}
 
 jobs:
   backup:
