feat: ishangam modue to push data

--- a/.env.template
+++ b/.env.template
@@ -40,3 +40,5 @@ CRON=* * * * *
 ENVIRONMENT=
 DAILY_EMAIL_HOUR_IN_USER_TIMEZONE=20
 GOOGLE_TAG=
+ISHANGAM_BASE_URL=https://dev-crm.isha.in/api
+ISHANGAM_TOKEN=
