--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dotenv": "^15.0.0",
     "express-basic-auth": "^1.2.1",
     "express-handlebars": "^6.0.2",
+    "got": "^11.8.3",
     "handlebars": "^4.7.7",
     "handlebars-helpers": "^0.10.0",
     "moment": "^2.29.1",
@@ -80,6 +81,7 @@
     "@types/express": "^4.17.13",
     "@types/express-handlebars": "^6.0.0",
     "@types/express-session": "^1.17.4",
+    "@types/got": "^9.6.12",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
     "@types/nodemailer": "^6.4.4",
